# hello_world

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: main.cpp
